--- a/Futures2023/config/config.json
+++ b/Futures2023/config/config.json
@@ -14,11 +14,7 @@
     "pillars": [
         {
             "id": 0,
-            "port": "/dev/ttyAMA0"
-        },
-        {
-            "id": 1,
-            "port": "COM4"
+            "port": "/dev/ttyACM0"
         }
     ]
 }
