--- a/Futures2023/config/config.json
+++ b/Futures2023/config/config.json
@@ -14,7 +14,11 @@
     "pillars": [
         {
             "id": 0,
-            "port": "/dev/ttyACM0"
+            "port": "/dev/ttyACM0",
+            "pan": 0
         }
-    ]
+    ],
+    "bpm": 60,
+    "sonic-pi-ip": "172.18.144.1",
+    "sonic-pi-config-file": "/mnt/c/Users/qo18522/.sonic-pi/log/spider.log"
 }
