Implemented some gui

--- a/Futures2023/config/config.json
+++ b/Futures2023/config/config.json
@@ -16,6 +16,11 @@
             "id": 0,
             "port": "/dev/ttyACM0",
             "pan": 0
+        },
+        {
+            "id": 1,
+            "port": "/dev/ttyACM1",
+            "pan": 0
         }
     ],
     "bpm": 60,
