Added test environment and fixed deepcopy bug

--- a/CHIME2024/config/config.json
+++ b/CHIME2024/config/config.json
@@ -17,7 +17,7 @@
             "port": "/dev/ttyACM0",
             "pan": 0,
             "num_tubes": 6,
-            "tube_allocation": ["-p", "-t", "-a", "+p", "+t", "+a"],
+            "tube_allocation": ["t", "i", "k+", "m", "s", "b"],
             "map": "RotationMapper"
         },
         "fon003": {
