--- a/EmergeShowcase2025/config/config.json
+++ b/EmergeShowcase2025/config/config.json
@@ -33,7 +33,9 @@
             "port": "/dev/ttyACM0",
             "pan": 0,
             "num_tubes": 6,
-            "map": "FixedMapper"
+            "map": "FixedMapper",
+            "notes": [0, 2, 4, 6, 8, 10],
+            "octave": 4
         },
         "fon002": {
             "id": 1,
