--- a/EmergeShowcase2025/config/config.json
+++ b/EmergeShowcase2025/config/config.json
@@ -10,7 +10,7 @@
         [80,  250],
         [180, 250]
     ],
-    "tonnetz_server_api_endpoint": "http://192.168.1.30/api/forest",
+    "tonnetz_server_api_endpoint": "http://tzserver.local/forest.php",
     "mapping_id": 2,
     "pillars": {
         "fon006": {
