--- a/EmergeShowcase2025/config/config.json
+++ b/EmergeShowcase2025/config/config.json
@@ -56,7 +56,7 @@
             "background": 0.3
         },
         "instruments": {
-            "melody": "xylophone",
+            "melody": "pizzicato",
             "harmony": "flute",
             "background": "strings"
         },
