--- a/EmergeShowcase2025/config/config.json
+++ b/EmergeShowcase2025/config/config.json
@@ -27,7 +27,9 @@
             "port": "/dev/ttyACM0",
             "pan": 0,
             "num_tubes": 6,
-            "map": "FixedMapper"
+            "map": "FixedMapper",
+            "notes": [0, 2, 4, 6, 8, 10],
+            "octave": 4
         },
         "fon004": {
             "id": 1,
@@ -35,15 +37,17 @@
             "pan": 0,
             "num_tubes": 6,
             "map": "FixedMapper",
-            "notes": [0, 2, 4, 6, 8, 10],
-            "octave": 4
+            "notes": [0, 2, 3, 7, 9, 11],
+            "octave": 5
         },
         "fon002": {
             "id": 1,
             "port": "/dev/ttyACM0",
             "pan": 0,
             "num_tubes": 6,
-            "map": "FixedMapper"
+            "map": "FixedMapper",
+            "notes": [0, 2, 4, 6, 8, 10],
+            "octave": 4
         }
     },
     "bpm": 60,
