changed instrument to xylophone

--- a/EmergeShowcase2025/config/config.json
+++ b/EmergeShowcase2025/config/config.json
@@ -60,7 +60,7 @@
             "background": 0.3
         },
         "instruments": {
-            "melody": "piano",
+            "melody": "xylophone",
             "harmony": "flute",
             "background": "strings"
         },
