--- a/SomerScience2025/config/config.json
+++ b/SomerScience2025/config/config.json
@@ -17,7 +17,7 @@
             "port": "/dev/ttyACM0",
             "pan": 0,
             "num_tubes": 6,
-            "map": "FixedMapper",
+            "map": "LightSoundMapper",
             "notes": [0, 2, 4, 6, 8, 10],
             "octave": 4
         },
@@ -26,7 +26,7 @@
             "port": "/dev/ttyACM0",
             "pan": 0,
             "num_tubes": 6,
-            "map": "FixedMapper",
+            "map": "LightSoundMapper",
             "notes": [0, 2, 4, 6, 8, 10],
             "octave": 4
         },
@@ -44,7 +44,7 @@
             "port": "/dev/ttyACM0",
             "pan": 0,
             "num_tubes": 6,
-            "map": "FixedMapper",
+            "map": "LightSoundMapper",
             "notes": [0, 2, 4, 6, 8, 10],
             "octave": 4
         }
