change response time

--- a/SomerScience2025/config/config.json
+++ b/SomerScience2025/config/config.json
@@ -59,7 +59,7 @@
             "background": 0.5
         },
         "instruments": {
-            "melody": "xylophone",
+            "melody": "piano",
             "harmony": "flute",
             "background": "strings"
         },
