updating STEM2025 towards step sequencer implementation 1

--- a/STEM2025/.gitignore
+++ b/STEM2025/.gitignore
@@ -1,3 +1,3 @@
 */__pycache__/*
-raveforest/__pycache__/*
-raveforest/config.py
+superseded/raveforest/__pycache__/*
+superseded/raveforest/config.py
