--- a/STEM2025/config/config.json
+++ b/STEM2025/config/config.json
@@ -13,15 +13,6 @@
     "tonnetz_server_api_endpoint": "http://tzserver.local/forest.php",
     "mapping_id": 2,
     "pillars": {
-        "fon006": {
-            "id": 0,
-            "port": "/dev/ttyACM0",
-            "pan": 0,
-            "num_tubes": 6,
-            "map": "ColorSequencerMapper",
-            "notes": [0, 0, 0, 0, 0, 0],
-            "octave": 4
-        },
         "fon003": {
             "id": 1,
             "port": "/dev/ttyACM0",
@@ -29,7 +20,13 @@
             "num_tubes": 6,
             "map": "ColorSequencerMapper",
             "notes": [3, 3, 3, 3, 3, 3],
-            "octave": 4
+            "octave": 4,
+            "bpm": 30,
+            "instruments": {
+                "melody": "strings",
+                "harmony": "flute",
+                "background": "strings"
+            }
         },
         "fon004": {
             "id": 1,
@@ -38,7 +35,13 @@
             "num_tubes": 6,
             "map": "ColorSequencerMapper",
             "notes": [7, 7, 7, 7, 7, 7],
-            "octave": 5
+            "octave": 5,
+            "bpm": 60,
+            "instruments": {
+                "melody": "xylophone",
+                "harmony": "flute",
+                "background": "strings"
+            }
         },
         "fon002": {
             "id": 1,
@@ -47,7 +50,13 @@
             "num_tubes": 6,
             "map": "ColorSequencerMapper",
             "notes": [0, 0, 0, 0, 0, 0],
-            "octave": 4
+            "octave": 4,
+            "bpm": 60,
+            "instruments": {
+                "melody": "xylophone",
+                "harmony": "flute",
+                "background": "strings"
+            }
         }
     },
     "bpm": 60,
