--- a/Konstanz2025/config/config.json
+++ b/Konstanz2025/config/config.json
@@ -8,10 +8,8 @@
             "id": 1,
             "port": "/dev/ttyACM0",
             "pan": 0,
-            "num_tubes": 6,
-            "map": "FixedMapper",
-            "notes": [1, 2, 4, 5, 8, 11],
-            "octave": 6,
+            "num_buttons": 4,
+            "map": "ButtonTriggerMapper",
             "bpm": 45,
             "instruments": {
                 "melody1": "lead_synth",
@@ -33,10 +31,8 @@
             "id": 1,
             "port": "/dev/ttyACM0",
             "pan": 0,
-            "num_tubes": 6,
-            "map": "FixedMapper",
-            "notes": [2, 3, 4, 6, 8, 10],
-            "octave": 5,
+            "num_buttons": 4,
+            "map": "ButtonTriggerMapper",
             "bpm": 60,
             "instruments": {
                 "melody1": "melody_softEP",
