--- a/Konstanz2025/config/config.json
+++ b/Konstanz2025/config/config.json
@@ -4,9 +4,9 @@
         "broker_ip": "127.0.0.1"
     },
     "pillars": {
-        "cave003": {
+        "cave002": {
             "id": 1,
-            "port": "/dev/ttyACM0",
+            "port": "/dev/ttyUSB0",
             "pan": 0,
             "num_buttons": 4,
             "map": "ButtonTriggerMapper",
@@ -15,36 +15,38 @@
                 "melody1": "lead_synth",
                 "melody2": "lead2_synth",
                 "harmony": "bass_synth",
-                "background": "pad_synth"
+                "background": "bass_fmGrowl"
             },
             "volume": {
                 "melody1": 0.6,
                 "melody2": 0.5,
-                "harmony": 0.5,
+                "harmony": 0.1,
                 "background": 0.8
             },
             "broadcast":{
                 "echo_delay_duration": 4.0
             }
         },
-        "fon004": {
+        "cave003": {
             "id": 1,
-            "port": "/dev/ttyACM0",
+            "port": "/dev/ttyUSB0",
             "pan": 0,
             "num_buttons": 4,
             "map": "ButtonTriggerMapper",
             "bpm": 60,
             "instruments": {
-                "melody1": "melody_softEP",
-                "melody2": "lead2_synth",
-                "harmony": "melody_vocal",
-                "background": "bassHum_beating"
+                "melody1": "lead_synth",
+                "melody2": "melody_vocal",
+                "melody3": "melody_bells",
+                "harmony": "bass_synth",
+                "background": "pad_synth"
             },
             "volume": {
                 "melody1": 0.1,
                 "melody2": 0.08,
-                "harmony": 0.6,
-                "background": 0.3
+                "melody3": 0.12,
+                "harmony": 0.08,
+                "background": 0.6
             },
             "broadcast":{
                 "echo_delay_duration": 4.0
